--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~2.1.3",
     "impress.js": "~0.5.3",
     "c3js-chart": "~0.4.9",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "sass-bootstrap": "~3.0.2"
   }
 }
