--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~1.0.1",
     "grunt-browser-sync": "~1.3.6",
+    "grunt-build-control": "^0.4.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-compass": "~1.0.0",
